RESOLVED FIXED 273658
REGRESSION (278263@main): [UnifiedPDF] Error about ProcessCapabilities::canUseAcceleratedBuffers()
https://bugs.webkit.org/show_bug.cgi?id=273658
Summary REGRESSION (278263@main): [UnifiedPDF] Error about ProcessCapabilities::canUs...
Simon Fraser (smfr)
Reported 2024-05-02 16:44:59 PDT
If canPaintSelectionIntoOwnedLayer() is false, we hit errors where the webcontent process is trying to use an IOSurface buffer in the selection layer.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-05-02 16:45:25 PDT
Simon Fraser (smfr)
Comment 2 2024-05-02 16:47:10 PDT
EWS
Comment 3 2024-05-02 18:44:15 PDT
Committed 278295@main (a2d74c7f5577): <https://commits.webkit.org/278295@main> Reviewed commits have been landed. Closing PR #28070 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.