REGRESSION (278263@main): [UnifiedPDF] Error about ProcessCapabilities::canUseAcceleratedBuffers() https://bugs.webkit.org/show_bug.cgi?id=273658 rdar://127462832

Reviewed by Abrar Rahman Protyasha and Sammy Gill.

We can't mix and match accelerated drawing, and accessing the platform context, because this
tries to map IOSurfaces into the webcontent process, which is denied by the sandbox.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::ensureLayers):

Canonical link: https://commits.webkit.org/278295@main